--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,17 @@
 
 :root {
   --color-win: #78CF82;
-  --color-lose: #D94545;
+  --color-lose: #881EE4;
   --color-start: #5b85b7;
-  --color-neutral: #445069;
-  --color-neutral-light: #D2D2D2;
-  --color-keys: #37474F;
-  --color-keys-light: #E5E5E5;
+  --color-neutral:#85E21F;
+  --color-neutral-light: #85E21F;
+  --color-keys: #85E21F;
+  --color-keys-light: #85E21F;
   --font-size-large: 60px;
   --font-size-medium: 20px;
   --transition: all .2s ease-in-out;
   --font-family: 'CFHalloween-Regular';
+  --color: #85E21F;
 }
 
 /* main */
@@ -30,6 +31,7 @@ body {
   flex-direction: column;
   display: flex;
   height: 100vh;
+  background-color: #F75F1C;
 }
 
 li, ol, ul {
@@ -52,7 +54,7 @@ button {
   margin: 6px;
   border: 1px solid transparent;
   padding: .5rem 1rem;
-  color: white;
+  color: #85E21F;
   font-size: var(--font-size-medium);
   background-color: black;
   border-radius: 5px;
@@ -88,7 +90,7 @@ button {
 /* Title */
 
 .header {
-  color: #3a3f58;
+  color: #FFF;
 }
 
 
@@ -100,8 +102,8 @@ button {
   width: 65px;
   padding: 20px 1px 0 1px;
   margin-right: 2px;
-  color: transparent;
-  background: var(--color-neutral-light);
+  color: #881EE4;
+  background: white;
   border-radius: 5px;
 }
 
@@ -109,11 +111,9 @@ button {
   width: 15px;
 }
 
-
-
 .show {
   color: #fff;
-  background-color: #4ac0d5;
+  background-color: #85E21F;
   font-size: 20px;
   height: 65px;
   width: 65px;
@@ -130,24 +130,25 @@ button {
 .keyrow {
   display: flex;
   justify-content: center;
+  color: #85E21F;
 }
 
 .chosen {
-  background: #3a3f58;
+  background: #881EE4;
   border-radius: 5px;
   font-size: var(--font-size-medium);
-  color: #FFFFFF;
+  color: #85E21F;
 }
 
 .wrong {
-  background: #f7a964;
-  color: #FFFFFF;
+  background: black;
+  color: red;
 }
 
 .btn__reset {
   padding: 16px;
   margin: 50px auto;
-  background: #f7a964;
+  background: #F75F1C;
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
@@ -161,14 +162,13 @@ button {
   border-right: solid 3px rgba(0, 0, 0, 0);
 }
 
-
 /* Overlay */
 
 #overlay {
   display: flex;
   flex-direction: column;
   position: fixed;
-  color: #FFFFFF;
+  color: #F75F1C;
   justify-content: center;
   top: 0;
   bottom: 0;
@@ -182,7 +182,7 @@ button {
 }
 
 .start {
-  background-color: #f5785f;
+  background-color: #F75F1C;
 }
 
 .start a {
@@ -198,7 +198,7 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: #F75F1C;
 }
 
 .lose a {
